# monitoring

./: .gitignore  README.md
app/: app.py  main.py  pyproject.toml
app/monitoring/: cloud-watch-agent-config.json  main.py  schemas.py
infrastructure/: ec-2.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infrastructure/terraform/: app-bootstrap-script.sh  ec-2.tf  main.tf  terraform.tfstate  terraform.tfstate.backup
