[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["michal <michal.suhak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
